[gd_scene load_steps=38 format=3 uid="uid://cfv7m6ke8nb2a"]

[ext_resource type="Texture2D" uid="uid://cc34cek2x7rdi" path="res://assets/sprites/world/world_at_war.png" id="1_27hir"]
[ext_resource type="Script" path="res://scenes/world/PalaceEntrance.gd" id="1_tccje"]
[ext_resource type="Texture2D" uid="uid://cymnhl47hj6bo" path="res://assets/sprites/world/world.png" id="2_e6vvn"]
[ext_resource type="Texture2D" uid="uid://qxyg7qqfhihu" path="res://assets/sprites/world/log_burning.png" id="3_4l0uv"]
[ext_resource type="Texture2D" uid="uid://b7t8xabija863" path="res://assets/sprites/world/palace_entrance.png" id="3_bqvjn"]
[ext_resource type="Texture2D" uid="uid://djyvyrehkqvkd" path="res://assets/sprites/world/tree_burning.png" id="4_5grc7"]
[ext_resource type="Texture2D" uid="uid://ld057cvks115" path="res://assets/sprites/Characters/King/normal/king_normal.png" id="7_2xsic"]
[ext_resource type="Texture2D" uid="uid://ydhvn2c0apbq" path="res://assets/sprites/Characters/MC/MC.png" id="8_3q4x4"]
[ext_resource type="PackedScene" uid="uid://c0u8yvqkliii7" path="res://scenes/Transition/TransitionScene.tscn" id="9_ofwwb"]
[ext_resource type="AudioStream" uid="uid://5o6md411cinm" path="res://assets/music/SoundEffects/door_open.mp3" id="10_ftiuw"]
[ext_resource type="AudioStream" uid="uid://cekweunju3vld" path="res://assets/music/SoundEffects/walk_grass.wav" id="11_wpon4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sxjtb"]
texture = ExtResource("1_27hir")
8:4/size_in_atlas = Vector2i(2, 2)
8:4/0 = 0
8:10/size_in_atlas = Vector2i(2, 2)
8:10/0 = 0
6:10/size_in_atlas = Vector2i(2, 2)
6:10/0 = 0
4:10/size_in_atlas = Vector2i(2, 2)
4:10/0 = 0
2:10/size_in_atlas = Vector2i(2, 2)
2:10/0 = 0
0:10/size_in_atlas = Vector2i(2, 2)
0:10/0 = 0
8:8/size_in_atlas = Vector2i(2, 2)
8:8/0 = 0
8:8/0/texture_origin = Vector2i(-1, 0)
6:8/size_in_atlas = Vector2i(2, 2)
6:8/0 = 0
4:8/size_in_atlas = Vector2i(2, 2)
4:8/0 = 0
2:8/size_in_atlas = Vector2i(2, 2)
2:8/0 = 0
0:8/size_in_atlas = Vector2i(2, 2)
0:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m5r7p"]
texture = ExtResource("2_e6vvn")
12:2/size_in_atlas = Vector2i(2, 4)
12:2/0 = 0
10:6/size_in_atlas = Vector2i(2, 2)
10:6/0 = 0
6:6/size_in_atlas = Vector2i(2, 2)
6:6/0 = 0
4:6/size_in_atlas = Vector2i(2, 2)
4:6/0 = 0
0:6/size_in_atlas = Vector2i(2, 2)
0:6/0 = 0
4:4/size_in_atlas = Vector2i(2, 2)
4:4/0 = 0
6:4/size_in_atlas = Vector2i(2, 2)
6:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4h5f6"]
texture = ExtResource("3_4l0uv")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/animation_columns = 4
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2noo5"]
texture = ExtResource("4_5grc7")
0:0/size_in_atlas = Vector2i(2, 4)
0:0/animation_columns = 4
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_lqox4"]
sources/0 = SubResource("TileSetAtlasSource_sxjtb")
sources/1 = SubResource("TileSetAtlasSource_m5r7p")
sources/3 = SubResource("TileSetAtlasSource_4h5f6")
sources/4 = SubResource("TileSetAtlasSource_2noo5")

[sub_resource type="AtlasTexture" id="AtlasTexture_oxnfs"]
atlas = ExtResource("3_bqvjn")
region = Rect2(0, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lso5f"]
atlas = ExtResource("3_bqvjn")
region = Rect2(320, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_210av"]
atlas = ExtResource("3_bqvjn")
region = Rect2(640, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_cduxc"]
atlas = ExtResource("3_bqvjn")
region = Rect2(960, 0, 320, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_oc8wf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxnfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lso5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cduxc")
}],
"loop": false,
"name": &"gates_open",
"speed": 3.0
}]

[sub_resource type="Curve2D" id="Curve2D_y2k2f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 160, 264, 0, 0, 0, 0, 160, -24)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_5x4ds"]
atlas = ExtResource("7_2xsic")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opbvx"]
atlas = ExtResource("7_2xsic")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwwgm"]
atlas = ExtResource("7_2xsic")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x10pi"]
atlas = ExtResource("7_2xsic")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yf37"]
atlas = ExtResource("7_2xsic")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mko4k"]
atlas = ExtResource("7_2xsic")
region = Rect2(320, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_krv0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x4ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opbvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwwgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x10pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yf37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mko4k")
}],
"loop": true,
"name": &"up",
"speed": 6.0
}]

[sub_resource type="Curve2D" id="Curve2D_06u0j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 176, 288, 0, 0, 0, 0, 176, 0)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_ricar"]
atlas = ExtResource("8_3q4x4")
region = Rect2(0, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_do3a6"]
atlas = ExtResource("8_3q4x4")
region = Rect2(64, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibe1o"]
atlas = ExtResource("8_3q4x4")
region = Rect2(128, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lun4s"]
atlas = ExtResource("8_3q4x4")
region = Rect2(192, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnud4"]
atlas = ExtResource("8_3q4x4")
region = Rect2(256, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcmh0"]
atlas = ExtResource("8_3q4x4")
region = Rect2(320, 128, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4abgl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ricar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do3a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibe1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lun4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnud4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcmh0")
}],
"loop": true,
"name": &"up",
"speed": 6.0
}]

[node name="PalaceEntrance" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_tccje")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_lqox4")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(589834, 262144, 10, 458762, 262144, 10, 720906, 262144, 10, 851978, 262144, 10, 983050, 262144, 10, 458764, 393216, 10, 458766, 393216, 10, 458768, 393216, 10, 458770, 393216, 10, 458772, 393216, 10, 589836, 393216, 10, 589838, 393216, 10, 589840, 393216, 10, 589842, 393216, 10, 589844, 393216, 10, 720916, 393216, 10, 720914, 393216, 10, 720912, 393216, 10, 720910, 393216, 10, 720908, 393216, 10, 851980, 393216, 10, 851982, 393216, 10, 851984, 393216, 10, 851986, 393216, 10, 851988, 393216, 10, 983060, 393216, 10, 983058, 393216, 10, 983056, 393216, 10, 983054, 393216, 10, 983052, 393216, 10, 983048, 393216, 10, 983046, 393216, 10, 983044, 393216, 10, 983042, 393216, 10, 983040, 393216, 10, 851968, 393216, 10, 720896, 393216, 10, 589824, 393216, 10, 458752, 393216, 10, 458754, 393216, 10, 458756, 393216, 10, 458758, 393216, 10, 458760, 393216, 10, 589832, 393216, 10, 720904, 393216, 10, 851976, 393216, 10, 851974, 393216, 10, 720902, 393216, 10, 589830, 393216, 10, 589828, 393216, 10, 589826, 393216, 10, 720898, 393216, 10, 720900, 393216, 10, 851972, 393216, 10, 851970, 393216, 10, 327680, 393217, 4, 196608, 393217, 4, 65536, 393217, 4, -65536, 393217, 4, -65534, 393217, 4, 65538, 393217, 4, 196610, 393217, 4, 327682, 393217, 4, 327684, 393217, 4, 196612, 393217, 4, 65540, 393217, 4, -65532, 393217, 4, -65530, 393217, 4, 65542, 393217, 4, 196614, 393217, 4, 327686, 393217, 4, 327688, 393217, 4, 196616, 393217, 4, 65544, 393217, 4, -65528, 393217, 4, 327692, 393217, 4, 196620, 393217, 4, 65548, 393217, 4, -65524, 393217, 4, -65522, 393217, 4, 65550, 393217, 4, 196622, 393217, 4, 327694, 393217, 4, 327696, 393217, 4, 327698, 393217, 4, 327700, 393217, 4, 196628, 393217, 4, 196626, 393217, 4, 196624, 393217, 4, 65552, 393216, 10, -65520, 393217, 4, -65518, 393217, 4, 65554, 393217, 4, 65556, 393217, 4, -65516, 393217, 4, 327690, 262145, 4, 196618, 262145, 4, 65546, 262145, 4, -65526, 262145, 4, -65521, 393217, 4, -65523, 393217, 4, 65551, 393217, 4, 65553, 393217, 4, 8, 393217, 4, 327685, 393217, 4)
layer_1/name = "trees"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(983056, 786433, 2, 851988, 786433, 2, 983046, 786433, 2, 786432, 4, 0, 327695, 786433, 2, 327693, 786433, 2, 327697, 786433, 2, 327685, 786433, 2, 327683, 786433, 2, 327681, 786433, 2, 327687, 786433, 2, 327699, 786433, 2)
layer_2/name = "logs"
layer_2/y_sort_enabled = true
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(524308, 655361, 6, 917508, 655361, 6, 786445, 524288, 4, 524289, 524288, 4)
layer_3/name = "stones "
layer_3/tile_data = PackedInt32Array()
layer_4/name = "extras"
layer_4/tile_data = PackedInt32Array(327696, 393217, 6, 589838, 393217, 6, 262155, 393217, 6, 589828, 393217, 6, 327680, 393217, 6, 131077, 393217, 6, -65535, 393217, 6, 12, 393217, 6, 131082, 393217, 6, 131090, 393217, 6, 131092, 262145, 6, 17, 262145, 6, 131086, 262145, 6, 131080, 262145, 6, 65538, 262145, 6, 655366, 262145, 6, 458752, 262145, 6, 393228, 262145, 6, 327688, 262145, 6, 458766, 262145, 6, 655380, 262145, 6, 393235, 262145, 6, 327700, 1, 6, 327692, 1, 6, 10, 1, 6, 458757, 1, 6, 65539, 1, 6, 720899, 393217, 6, 917504, 393217, 6, 983048, 393217, 6, 720909, 393217, 6, 917522, 393217, 6, 655379, 393217, 6, 983054, 393217, 6, 786433, 262145, 6, 655368, 262145, 6, 851980, 262145, 6, 786449, 262145, 6, 917524, 262145, 6, 851973, 262145, 6, 917513, 1, 6, 917506, 1, 6, 720901, 1, 6, 524290, 1, 6, 458760, 1, 6, 262145, 1, 6, 458764, 1, 6, 327694, 1, 6, 524307, 1, 6, 720911, 1, 6, 786452, 1, 6)

[node name="castle" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(168, 43)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_oc8wf")
animation = &"gates_open"
frame = 3
frame_progress = 1.0
offset = Vector2(0, -20)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-35, -21)
scale = Vector2(1.2, 1.2)
polygon = PackedVector2Array(135.833, -15.8333, 135.833, 110.833, 9.16667, 110.833, 9.16667, -22.5, 329.167, -22.5, 329.167, 110.833, 202.5, 110.833, 202.5, -15.8333)

[node name="KingPath" type="Path2D" parent="."]
z_index = 1
y_sort_enabled = true
curve = SubResource("Curve2D_y2k2f")

[node name="PathFollow2D" type="PathFollow2D" parent="KingPath"]
position = Vector2(160, 264)
rotates = false
loop = false

[node name="King" type="AnimatedSprite2D" parent="KingPath/PathFollow2D"]
sprite_frames = SubResource("SpriteFrames_krv0v")
animation = &"up"
frame = 5
frame_progress = 1.0

[node name="MCPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_06u0j")

[node name="PathFollow2D" type="PathFollow2D" parent="MCPath"]
position = Vector2(176, 288)
rotates = false
loop = false

[node name="MC" type="AnimatedSprite2D" parent="MCPath/PathFollow2D"]
sprite_frames = SubResource("SpriteFrames_4abgl")
animation = &"up"

[node name="Camera2D" type="Camera2D" parent="MCPath/PathFollow2D/MC"]
limit_left = -8
limit_top = -48
limit_right = 344
limit_bottom = 264

[node name="TransitionScene" parent="." instance=ExtResource("9_ofwwb")]
visible = false

[node name="gates" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ftiuw")
attenuation = 0.554785
panning_strength = 1.2

[node name="walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_wpon4")
volume_db = 10.0

[connection signal="animation_finished" from="castle" to="." method="_on_castle_animation_finished"]
